--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -31,3 +31,12 @@ body{
     margin-left: 20px;
     margin-right: 20px;
 }
+
+.card-title{
+    color: white;
+}
+
+.card{
+   height: 80%;
+   margin-left: 10px;
+}
